--- a/bbs/src/main/webapp/WEB-INF/web.xml
+++ b/bbs/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,9 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
+	<listener>
+		<listener-class>com.cloud.bbs.TestListener</listener-class>
+	</listener>
 	<!-- Processes application requests -->
 	<servlet>
 		<servlet-name>bbsServlet</servlet-name>
